@@ -1,7 +1,7 @@
-b16b9db3d59176c4a3fcd535eb29eb6d *DESCRIPTION
+21c94d108972407ff6c2612d0580cc3b *DESCRIPTION
 fbdfa969dd44871fd2c9de9eb52909ef *NAMESPACE
-a69b6af77751eb1fd9146a1632eab403 *NEWS
-c0e2a8f6578d5012086b1701b3fce604 *R/kknn.R
+2195252e488ea8b147298ad855cbb841 *NEWS
+5c8e65b4b54ca0acee2a2685a1bd4d3b *R/kknn.R
 153fc4f589249258d727c9c9bce749eb *R/specClust.R
 91074ac86d02f858cc5095b1f6d30367 *data/glass.RData
 dbc40eb130e5c07ce1115a8a687aa4ea *data/ionosphere.RData
@@ -10,9 +10,9 @@ ca9162d3ad966acad68b91780dd7e574 *man/contr.dummy.Rd
 51d595246dbc8a37b2c7e67d8dd57418 *man/glass.Rd
 e478f13283b0431ed8fe028de1cb680f *man/ionosphere.Rd
 3db01ab4aa20f0de4db9a26fbbf4c6ac *man/kknn-package.Rd
-b4a1a8e992e81f50aa3d6e86bdd6e5b5 *man/kknn.Rd
+4c55cdc98e9e615302ea70b88a1dba0e *man/kknn.Rd
 3f6130da3ae9f13b1c44f3dc456875d2 *man/miete.Rd
-9209f668e02d0872a4c86631cc92911e *man/simulation.Rd
+7b839d7303726161bff8653190d3430b *man/simulation.Rd
 6a77e3becc20ac8fada00eaf5076ad96 *man/specClust.Rd
-f2c7ee2ff8625fb4899911b02cfa9e59 *man/train.kknn.Rd
+461ba8c45f4bcdb2986871e63f68b855 *man/train.kknn.Rd
 c0b3dce6aa9f6e805b26a5e82d85433a *src/dm.c
