@@ -24,15 +24,18 @@ kknn(formula = formula(train), train, test, na.action = na.omit(),
   \item{k}{Number of neighbors considered.}
   \item{distance}{Parameter of Minkowski distance.}
   \item{kernel}{Kernel to use. Possible choices are "rectangular" (which is standard unweighted knn), "triangular", "epanechnikov" (or beta(2,2)), 
-	"biweight" (or beta(3,3)), "triweight" (or beta(4,4)), "cos", "inv" and "gaussian".} 
+	"biweight" (or beta(3,3)), "triweight" (or beta(4,4)), "cos", "inv", "gaussian", "rank" and "optimal".} 
   \item{ykernel}{Window width of an y-kernel, especially for prediction of ordinal classes.}  	
   \item{contrasts}{A vector containing the 'unordered' and 'ordered' contrasts to use.}	
+%  \item{optd}{An additional parameter for the "optimal" kernel.}	
 }
 \details{
-	This nearest neighbor method expands knn in several directions. First it can be used not only for classification, but also for regression and ordinal classification.
-  	Second it uses kernel functions to weight the neighbors according to their distances.
-	In fact, not only kernel functions but every monotonic decreasing function 
+This nearest neighbor method expands knn in several directions. First it can be used not only for classification, but also for regression and ordinal classification.
+Second it uses kernel functions to weight the neighbors according to their distances.
+In fact, not only kernel functions but every monotonic decreasing function 
   	\eqn{f(x) \forall x>0}{f(x) for all x>0} will work fine. 
+
+The number of neighbours used for the "optimal" kernel should be \eqn{ [ (2(d+4)/(d+2))^(d/(d+4)) k ]}, where k is the number that would be used for unweighted knn classification, i.e. kernel="rectangular". This factor \eqn{(2(d+4)/(d+2))^(d/(d+4))} is between 1.2 and 2 (see Samworth (2012) for more details).
 }
 \value{
   \code{kknn} returns a list-object of class \code{kknn} including the components 
@@ -46,12 +49,19 @@ kknn(formula = formula(train), train, test, na.action = na.omit(),
   \item{call}{The matched call.}
   \item{terms}{The 'terms' object used.}
 }
-\references{Hechenbichler K. and Schliep K.P. (2004)  \emph{Weighted k-Nearest-Neighbor Techniques and Ordinal Classification}, Discussion Paper 399, SFB 386, Ludwig-Maximilians University Munich
+\references{
+Hechenbichler K. and Schliep K.P. (2004)  \emph{Weighted k-Nearest-Neighbor Techniques and Ordinal Classification}, Discussion Paper 399, SFB 386, Ludwig-Maximilians University Munich
 (\url{http://www.stat.uni-muenchen.de/sfb386/papers/dsp/paper399.ps})
 
-Hechenbichler K. (2005)  \emph{Ensemble-Techniken und ordinale Klassifikation}, PhD-thesis}
+Hechenbichler K. (2005)  \emph{Ensemble-Techniken und ordinale Klassifikation}, PhD-thesis
+
+Samworth, R.J. (2012) \emph{Optimal weighted nearest neighbour classifiers.} Annals of Statistics, to appear.
+(avaialble from \url{http://www.statslab.cam.ac.uk/~rjs57/Research.html}) 
+}
 \author{ Klaus P. Schliep \email{klaus.schliep@gmail.com} \cr Klaus Hechenbichler}
  
+
+
 \seealso{ \code{\link[kknn]{train.kknn}}, \code{\link[kknn]{simulation}}, \code{\link[class]{knn}} and \code{\link[class]{knn1}} }
 \examples{
 library(kknn)
@@ -77,10 +87,10 @@ ionosphere.valid <- ionosphere[-c(1:200),]
 fit.kknn <- kknn(class ~ ., ionosphere.learn, ionosphere.valid)
 table(ionosphere.valid$class, fit.kknn$fit)
 (fit.train1 <- train.kknn(class ~ ., ionosphere.learn, kmax = 15, 
-	kernel = c("triangular", "rectangular", "epanechnikov"), distance = 1))
+	kernel = c("triangular", "rectangular", "epanechnikov", "optimal"), distance = 1))
 table(predict(fit.train1, ionosphere.valid), ionosphere.valid$class)
 (fit.train2 <- train.kknn(class ~ ., ionosphere.learn, kmax = 15, 
-	kernel = c("triangular", "rectangular", "epanechnikov"), distance = 2))
+	kernel = c("triangular", "rectangular", "epanechnikov", "optimal"), distance = 2))
 table(predict(fit.train2, ionosphere.valid), ionosphere.valid$class)
 }
 \keyword{ classif }
