@@ -1,3 +1,10 @@
+            CHANGES IN KKNN VERSION 1.2-0
+
+NEW FEATURES
+
+    o added new kernel "optimal" to kknn Samworth (2012).             
+            
+
             CHANGES IN KKNN VERSION 1.1-2
 
 BUG FIXES
